@@ -480,4 +480,14 @@ public class VFSFile implements Serializable
 
 	/** This is true if the attributes are already fetched. */
 	private boolean fetchedAttrs;
+	
+	/**
+	 * return file modified date, this function simply return 0,
+	 * VFS implementation should overwrite this to return the 
+	 * real modified data 
+	 */
+	public long getModified()
+	{
+		return 0;
+	}
 }
